Fixed talishar issue and other two issues.
Fixed the following issues:
Responsiveness of new deck in mobile. Now displays in single row with breadcrumbs.
Color of the play menu was not visible since text color was same as background. Added corresponding theme color to all themes.
Added random string to match description on Talishar.

--- a/resources/css/fabdb.css
+++ b/resources/css/fabdb.css
@@ -33,6 +33,7 @@
     --button-secondary-hover-background-color: theme("colors.blue.700");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.blue.500");
+    --link-hover-color: theme("colors.blue.700");
     --crumbs-background-color: theme('colors.blue.900');
     --nav-hover-text-color: theme('colors.blue.400');
 }
@@ -46,6 +47,7 @@
     --button-secondary-hover-background-color: theme("colors.gray.500");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.blue.300");
+    --link-hover-color: theme("colors.gray.500");
     --crumbs-background-color: theme('colors.yellow.700');
     --nav-hover-text-color: theme('colors.yellow.400');
 }
@@ -59,6 +61,7 @@
     --button-secondary-hover-background-color: theme("colors.red.700");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.red.500");
+    --link-hover-color: theme("colors.red.700");
     --crumbs-background-color: theme('colors.red.900');
     --nav-hover-text-color: theme('colors.red.400');
 }
@@ -72,6 +75,7 @@
     --button-secondary-hover-background-color: theme("colors.orange.600");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.orange.400");
+    --link-hover-color: theme("colors.orange.600");
     --crumbs-background-color: theme('colors.orange.800');
     --nav-hover-text-color: theme('colors.orange.400');
 }
@@ -85,6 +89,7 @@
     --button-secondary-hover-background-color: theme("colors.blue.600");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.blue.400");
+    --link-hover-color: theme("colors.blue.600");
     --crumbs-background-color: theme('colors.blue.800');
     --nav-hover-text-color: theme('colors.blue.400');
 }
@@ -98,6 +103,7 @@
     --button-secondary-hover-background-color: theme("colors.blue.700");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.blue.400");
+    --link-hover-color: theme("colors.blue.700");
     --crumbs-background-color: theme('colors.orange.900');
     --nav-hover-text-color: theme('colors.blue.400');
 }
@@ -111,6 +117,7 @@
     --button-secondary-hover-background-color: theme("colors.blue.700");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.green.500");
+    --link-hover-color: theme("colors.blue.700");
     --crumbs-background-color: theme('colors.green.800');
     --nav-hover-text-color: theme('colors.green.400');
 }
@@ -124,6 +131,7 @@
     --button-secondary-hover-background-color: theme("colors.teal.500");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.teal.500");
+    --link-hover-color: theme("colors.teal.500");
     --crumbs-background-color: theme('colors.indigo.900');
     --nav-hover-text-color: theme('colors.indigo.400');
 }
@@ -137,6 +145,7 @@
     --button-secondary-hover-background-color: theme("colors.blue.500");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.blue.400");
+    --link-hover-color: theme("colors.blue.500");
     --crumbs-background-color: theme('colors.teal.900');
     --nav-hover-text-color: theme('colors.blue.400');
 }
@@ -150,6 +159,7 @@
     --button-secondary-hover-background-color: theme("colors.orange.700");
     --button-secondary-text-color: theme("colors.white");
     --link-color: theme("colors.orange.400");
+    --link-hover-color: theme("colors.orange.700");
     --crumbs-background-color: theme('colors.orange.900');
     --nav-hover-text-color: theme('colors.orange.400');
 }
@@ -329,6 +339,16 @@ footer.footer .link:hover {
 
 .dark .input:focus {
     @apply focus:border-gray-400
+}
+
+.playdeck .dark span,
+.playdeck .dark svg{
+    color: #000;
+}
+
+.playdeck .dark:hover span, 
+.playdeck .dark:hover svg{
+    color: white;
 }
 
 .input-white {
